# glfw-experiment

./: CMakeLists.txt  Shader.hpp  glfw_experiment.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
resources/: shader.fs  shader.vs
shaders/: shader.fs  shader.vs
